# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> genkernel,
  genkernel.conf, -pkg/alpha/README, -pkg/ia64/README, -pkg/mips/.keep,
  -pkg/parisc/README, -pkg/parisc64/README, -pkg/ppc/README,
  -pkg/ppc64/README, -pkg/sparc/README, -pkg/sparc64/README, -pkg/um/README,
  -pkg/x86/README, -pkg/x86_64/README, -pkg/xen0/README, -pkg/xenU/README:
  Removing pkg directory, since it is no longer necessary. From now on, we'll
  just pull the tarballs from DISTDIR directly, and we've already moved our
  caches to /var/tmp/genkernel, so there's nothing left to keep here. This is
  genkernel 3.4.10_pre7 for testing.

  14 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_package.sh:
  Copy the original kconfig with a different name than the one used to build

  14 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_package.sh:
  Include original kconfig in kerncache If original kconfig exists in the
  kerncache, use that for comparison to the current kconfig

  14 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> genkernel:
  Switch back to building kernel first
  Optionally build the kernel a second time if we're integrating the initramfs

  14 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  genkernel, ia64/modules_load, mips/modules_load, parisc/modules_load,
  parisc64/modules_load, ppc/modules_load, ppc64/modules_load,
  sparc/modules_load, sparc64/modules_load, um/modules_load,
  x86/modules_load, x86_64/modules_load:
  Clean up the modules_load files and add qla2xxx. This is genkernel
  3.4.10_pre6 for testing.

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Stick CONFIG_INITRAMFS_ROOT_GID in the .config, too

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Remove existing CONFIG_INITRAMFS_SOURCE line and write new one as well as
  CONFIG_INITRAMFS_ROOT_UID line
