@@ -2,6 +2,10 @@
 # Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_cmdline.sh,
+  gen_determineargs.sh:
+  Get rid of --initramfs option as it doesn't do anything anymore
+
   14 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> genkernel,
   genkernel.conf, -pkg/alpha/README, -pkg/ia64/README, -pkg/mips/.keep,
   -pkg/parisc/README, -pkg/parisc64/README, -pkg/ppc/README,
